added language setting option

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -22,9 +22,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "whatsapp = whatsapp_analyzer(\"_chat.txt\") \n",
+    "whatsapp = whatsapp_analyzer(\"_chat.txt\",language = 'french',top_x_common_words = 30) \n",
     "# the .txt file contains the recording of the conversation\n",
-    "# to extract it, go to your conversation > contact_info > export chat (without media) "
+    "# to extract it, go to your conversation > contact_info > export chat (without media) \n",
+    "# possible to change the language (will affect which stop words are removed) to any nltk languages (english, italian etc) \n",
+    "# top_x_common_words sets the number of top words used by each users to display"
    ]
   },
   {
